fixed map from not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,8 @@ img  {
 }
 
 #map {
-  height: 80%;
-  width: 80%;
+  height: 40em;
+  width: 40em;
   margin: auto;
   margin-bottom: 20px;
   margin-top: 20px;
